Fixed issues in IE

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -31,6 +31,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     <!-- This snippet is used in production (included from viewer.html) -->
     <link rel="resource" type="application/l10n" href="locale/locale.properties.txt">
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js"></script>
     <script src="../build/pdf.min.js"></script>
     <script type="text/javascript">
       let resourceObj = null;
