--- a/web/viewer.html
+++ b/web/viewer.html
@@ -27,14 +27,37 @@ See https://github.com/adobe-type-tools/cmap-resources
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PDF.js viewer</title>
-    <link rel="stylesheet" href="viewer.css">
+    <link rel="stylesheet" href="viewer.min.css">
 
     <!-- This snippet is used in production (included from viewer.html) -->
     <link rel="resource" type="application/l10n" href="locale/locale.properties.txt">
     <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js"></script>
     <script src="../build/pdf.min.js"></script>
+    <script src="../build/Autolinker.min.js"></script>
     <script type="text/javascript">
       let resourceObj = null;
+      const autolinker = new Autolinker( {
+          urls : {
+              schemeMatches : true,
+              wwwMatches    : true,
+              tldMatches    : true
+          },
+          email       : false,
+          phone       : false,
+          mention     : false,
+          hashtag     : false,
+
+          stripPrefix : false,
+          stripTrailingSlash : false,
+          newWindow   : true,
+
+          truncate : {
+              length   : 0,
+              location : 'smart'
+          },
+
+          className : 'external-link'
+      } );
       function sendRequestClose() {
         window.parent.postMessage({
           type: 'close',
@@ -456,5 +479,5 @@ See https://github.com/adobe-type-tools/cmap-resources
     </div> <!-- outerContainer -->
     <div id="printContainer"></div>
   </body>
-  <script src="viewer03.min.js"></script>
+  <script src="viewer04.min.js"></script>
 </html>
