--- a/jitsi.html
+++ b/jitsi.html
@@ -56,7 +56,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
   const parentNode = document.getElementById('jitsi-container');
   const onload = () => {
     console.log('onload');
-    api.setFilmstripVisible(false);
+    // api.setFilmstripVisible(false);
   };
   const roomName = 'stage-33c3c0a4-6bc2-479d-85b9-5b6afbb0a818';
   const jwt = user.jwt;
