--- a/jitsi.html
+++ b/jitsi.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<script src="https://video-dev.meetingmaker.se/external_api.js"></script>
+<script src="https://video.meetingmaker.se/external_api.js"></script>
 <script src="jitsi-tokens.js"></script>
 <script src="speakers.js"></script>
 <script type="text/javascript">
