--- a/jitsi.html
+++ b/jitsi.html
@@ -58,7 +58,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
     console.log('onload');
     api.setFilmstripVisible(false);
   };
-  const roomName = 'stage-33c3c0a4-6bc2-479d-85b9-5b6afbb0a818';
+  const roomName = user.room;
   const jwt = user.jwt;
   const configOverwrite = {
     minParticipants: 1,
