--- a/jitsi.html
+++ b/jitsi.html
@@ -4,7 +4,7 @@
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <script src="https://video.meetingmaker.se/external_api.js"></script>
-<script src="https://raw.githubusercontent.com/nclong87/nclong87.github.io/master/jitsi-rooms.js"></script>
+<script src="rooms.js"></script>
 <script src="speakers.js"></script>
 <script type="text/javascript">
   const speakers = new Speakers();
