--- a/jitsi.html
+++ b/jitsi.html
@@ -43,6 +43,12 @@
       youtubeStreamKey: streamUrl,
     });
   }
+
+  function stopLiveStream() {
+    api.executeCommand('stopRecording', {
+      mode: 'stream',
+    });
+  }
 </script>
 <style>
 html,body {font-family:"Verdana",sans-serif}
@@ -65,6 +71,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
   <div class="controls">
     <button onclick="joinLeftStage()">Join/Left Stage</button>
     <button onclick="startLiveStream()">Start LiveStream</button>
+    <button onclick="stopLiveStream()">Stop LiveStream</button>
   </div>
 </div>
 </body>
