--- a/jitsi.html
+++ b/jitsi.html
@@ -84,7 +84,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
   const parentNode = document.getElementById('jitsi-container');
   const onload = () => {
     console.log('onload');
-    api.setFilmstripVisible(false);
+    // api.setFilmstripVisible(false);
   };
   const roomName = room.id;
   const jwt = user.jwt;
