--- a/jitsi.html
+++ b/jitsi.html
@@ -75,7 +75,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
   <div style="position: fixed; width: 100%; height: 80%;" id="jitsi-container" />
   <div class="controls">
     <button onclick="joinLeftStage()">Join/Left Stage</button>
-    <button onclick="startLiveStream()">Start LiveStream</button>
+    <button onclick="onClickStartLiveStream()">Start LiveStream</button>
   </div>
 </div>
 </body>
